k8s/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-app-frontend
  namespace: ecommerce-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-app-frontend
  template:
    metadata:
      labels:
        app: ecommerce-app-frontend
    spec:
      volumes:
        - name: ui-config
          configMap:
            name: frontend-configmap
            items:
            - key: config.json
              path: config.json
      containers:
      - image: khalidharbi/ecommerce-app-frontend:latest
        name: ecommerce-app-frontend
        ports:
        - containerPort: 80
        volumeMounts:
          - name: ui-config
            mountPath: /usr/share/nginx/html/config.json 
            subPath: config.json                           
            readOnly: true
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
