k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-app-frontend
  namespace: ecommerce-app
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: ecommerce-app-frontend
